# iceguard-secure-riscv-soc

./: README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml
hw/: build.py
sw/firmware/: main.c
