[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

[project]
name = "iceguardr-secure-riscv"
version = "2025.12.0" 
description = "IceGuard - Secure RISC-V SoC on FPGA"
requires-python = ">=3.13"
dependencies = [
  "migen",
  "litex",
  "litex-boards",
  "litedram",
  "liteeth"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "requests",
  "pexpect",
]
