[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

[project]
name = "iceguard-secure-riscv"
version = "2025.12.0" 
description = "IceGuard - Secure RISC-V SoC on FPGA"
requires-python = ">=3.10"
dependencies = [
  "meson",
  "migen",
  "litex",
  "litex-boards",
  "litedram",
  "liteeth",
  "pythondata-cpu-vexriscv",
  "pythondata-software-picolibc",
  "pythondata-software-compiler_rt"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "requests",
  "pexpect",
]
